--- a/forum/DFor/static/css/style.css
+++ b/forum/DFor/static/css/style.css
@@ -1,318 +1,322 @@
-html
-{ height: 100%;}
+/*
+Design by D.Juwara - http://www.runelocus.com/
+Made for Zymic.com - Free Web Templates
+Modyfikacja ZiomekH & Adi
+*/
 
-*
-{ margin: 0;
-  padding: 0;}
+body {
+	margin: 20px 0;
+	background-image: url('../obrazki/bg.png');
+}
 
-body
-{ font: normal .80em 'trebuchet ms', arial, sans-serif;
-  background: #F4F4EE;
-  color: #5D5D5D;}
+body, th, td {
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #666666;
+}
 
-p
-{ padding: 0 0 20px 0;
-  line-height: 1.7em;}
+h1, h2 {
+	margin-top: 1.5em;
+	color: #626456;
+}
 
-img
-{ border: 0;}
+h1 {
+	letter-spacing: -.075em;
+	font-size: 3em;
+}
 
-h1, h2, h3, h4, h5, h6 
-{ font: normal 175% 'century gothic', arial, sans-serif;
-  color: #43423F;
-  margin: 0 0 15px 0;
-  padding: 15px 0 5px 0;}
+h2 {
+	letter-spacing: -.05em;
+	text-transform: uppercase;
+	font-size: 1.0em;
+	font-weight: bold;
+	color: white;
+}
 
-h2
-{ font: normal 175% 'century gothic', arial, sans-serif;
-  color: #B60000;}
+p, ul {
+	margin-top: 1.5em;
+	line-height: 1.8em;
+	font-size: 1.1em;
+}
 
-h3
-{ font: normal 165% 'century gothic', arial, sans-serif;}
+a {
+	text-decoration: none;
+	color: #3C7BCF;
+}
 
-h4, h5, h6
-{ margin: 0;
-  padding: 0 0 5px 0;
-  font: normal 120% arial, sans-serif;
-  color: #B60000;}
+a:hover {
+	border: none;
+}
 
-h5, h6
-{ font: italic 95% arial, sans-serif;
-  color: #888;}
+h1 a, h2 a, h3 a {
+	border: none;
+	text-decoration: none;
+	color: white;
+}
 
-h6
-{ color: #362C20;}
+hr {
+	display: none;
+}
 
-a, a:hover
-{ outline: none;
-  text-decoration: underline;
-  color: #A4AA04;}
+header {
+	width: 1150px;
+	height: 35px;
+	margin: 0 auto;
+	background-color:transparent;
+	background-image:url('../obrazki/transbg.png');
+}
 
-a:hover
-{ text-decoration: none;
-  color: #5D5D5D;}
 
-.left
-{ float: left;
-  width: auto;
-  margin-right: 10px;}
+/* Menu */
 
-.right
-{ float: right; 
-  width: auto;
-  margin-left: 10px;}
+#menu {
+	float: left;
+}
 
-.center
-{ display: block;
-  text-align: center;
-  margin: 20px auto;}
+#menu ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	line-height: normal;
+}
 
-blockquote
-{ margin: 20px 0; 
-  padding: 10px 20px 0 20px;
-  border: 1px solid #E5E5DB;
-  background: #FFF;}
+#menu li {
+	float: left;
+}
 
-ul
-{ margin: 2px 0 22px 17px;}
+#menu a {
+	display: block;
+	float: left;
+	height: 25px;
+	padding: 10px 20px 0 20px;
+	text-decoration: none;
+	font-size: 1.1em;
+	font-weight: bold;
+	color: #ffffff;
+}
 
-ul li
-{ list-style-type: circle;
-  margin: 0 0 6px 0; 
-  padding: 0 0 4px 5px;}
+#menu a:hover {
+	background:  #ffffff;
+	color: #2C2E22;
+}
 
-ol
-{ margin: 8px 0 22px 20px;}
+#menu .current_page_item a {
+	background:  #ffffff;
+	color: #2C2E22;
+}
 
-ol li
-{ margin: 0 0 11px 0;}
 
-#main, #logo, #menubar, #content_header, #site_content, #content_footer, footer
-{ margin-left: auto; 
-  margin-right: auto;}
+/* Logo */
 
-#main
-{ padding-bottom: 20px;}
+#logo {
+	width: 1140px;
+	height: 200px;
+	margin: 0 auto;
+	background: url('../obrazki/logo.jpg') no-repeat left top;
+	height: 157px;
+	border: 5px solid #ffffff;
+}
 
-header
-{ background: #3A332D;
-  height: 170px;
-  margin-bottom: 30px;}
+#logo h1, #logo h2 {
+	float: left;
+	margin: 0;
+	padding: 0;
+}
 
-#logo
-{ width: 878px;
-  position: relative;
-  height: 134px;
-  background: #3A332D url(logo.png) no-repeat;}
+#logo h1 {
+	padding: 10px 5px 0 20px;
+	color: #2C2E22;
+}
 
-#logo #logo_text 
-{ position: absolute; 
-  top: 10px;
-  left: 0;}
+#logo h2 {
+	padding: 45px 0 0 0;
+	font-style: italic;
+}
 
-#logo h1, #logo h2
-{ font: normal 300% 'century gothic', arial, sans-serif;
-  border-bottom: 0;
-  text-transform: none;
-  margin: 0 0 0 9px;}
+#logo p {
+	clear: left;
+	margin: 0;
+	padding: 0 0 0 20px;
+	line-height: normal;
+	font-size: 1.2em;
+	font-weight: bold;
+	color: #FFFFFF;
+}
 
-#logo_text h1, #logo_text h1 a, #logo_text h1 a:hover 
-{ padding: 22px 0 0 0;
-  color: #FFF;
-  letter-spacing: 0.1em;
-  text-decoration: none;}
 
-#logo_text h1 a .logo_colour
-{ color: #ECEF01;}
+/* Strona */
 
-#logo_text h2
-{ font-size: 120%;
-  padding: 4px 0 0 0;
-  color: #A8AA94;}
+#strona {
+    width: 1100px;
+    margin: 0 auto;
+    padding: 0px 20px 20px 20px;
+    background: #FFFFFF;
+    border: 5px solid #ffffff;
+    border-top: none;
+}
 
-#menubar
-{ height: 44px;
-  width: 940px;
-  margin: 1px auto 0 auto;} 
 
-ul#menu
-{ float: right;}
+/* Forum tytuł */
 
-ul#menu li
-{ float: left;
-  padding: 0 0 0 6px;
-  list-style: none;
-  margin: 2px 2px 0 0;
-  background: #635B53 url(tab.png) no-repeat 0 0;}
+.forum .gora {
+    padding: 20px 0 0 0;
+}
 
-ul#menu li a
-{ font: normal 100% 'trebuchet ms', sans-serif;
-  display: block; 
-  float: left; 
-  height: 20px;
-  padding: 6px 28px 5px 22px;
-  text-align: center;
-  color: #FFF;
-  text-decoration: none;
-  background: #635B53 url(tab.png) no-repeat 100% 0;} 
+.forum .gora .pasek {
+    height: 50px;
+    width: 2px;
+    float: left;
+}
 
-ul#menu li.tab_selected a
-{ height: 20px;
-  padding: 6px 28px 5px 22px;}
+.forum .gora .lewy {
+    background: url('../obrazki/duzy-lewy.gif') no-repeat left top;
+}
 
-ul#menu li.selected
-{ margin: 2px 2px 0 0;
-  background: #635B53 url(tab_selected.png) no-repeat 0 0;}
+.forum .gora .prawy {
+    background: url('../obrazki/duzy-prawy.gif') no-repeat left top;
+}
 
-ul#menu li.selected a, ul#menu li.selected a:hover
-{ background: #635B53 url(tab_selected.png) no-repeat 100% 0;
-  color: #111;}
+.forum .gora .srodek {
+    background: url('../obrazki/duzy-srodek.gif') repeat-x left bottom;
+}
 
-ul#menu li a:hover
-{ color: #ECEF01;}
+.forum .gora .tekst {
+    margin: 0;
+    font-weight: normal;
+    color: white;
+}
 
-#content_header, #content_footer
-{ width: 940px;
-  background: url(content_header.png) no-repeat;
-  height: 14px;}
+.forum .gora .tytul h1.tekst {
+    padding: 10px 0  0 15px;
+    font-weight: bold;
+    font-size: 2.0em;
+}
 
-#content_footer
-{ background: url(content_footer.png) no-repeat;}
+.forum .gora .nowy_temat h1.tekst {
+    padding: 10px 0;
+    font-size: 2.0em;
+    text-align: center;
+}
 
-#site_content
-{ width: 878px;
-  overflow: hidden;
-  margin: 0 auto 0 auto;
-  padding: 0 20px 20px 40px;
-  background: #FFF;
-  border-left: 1px solid #ECECE0;
-  border-right: 1px solid #ECECE0;} 
+.forum .gora .tytul .srodek {
+    width: 942px;
+}
 
-.sidebar
-{ float: right;
-  width: 190px;
-  padding: 0 15px 20px 15px;}
 
-.sidebar ul
-{ width: 178px; 
-  padding: 4px 0 0 0; 
-  margin: 4px 0 30px 0;}
+.forum .gora .nowy_temat .srodek {
+    width: 150px;
+}
 
-.sidebar li
-{ list-style: none; 
-  padding: 0 0 7px 0; }
+.forum .opis {
+    margin: 0;
+    padding: 5px 0px 0px 15px;
+    background: url('../obrazki/linia.gif') repeat-x left bottom;
+    text-transform: uppercase;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+    color: #000;
+}
 
-.sidebar li a, .sidebar li a:hover
-{ padding: 0 0 0 25px;
-  display: block;
-  background: transparent url(link.png) no-repeat left center;} 
+/* Forum nagłówki */
 
-.sidebar li a.selected
-{ color: #444;
-  text-decoration: none;} 
+.forum .naglowki {
+    margin: 10px 0 0 0;
+}
 
-#content
-{ text-align: left;
-  width: 613px;
-  padding: 0;}
+.forum .naglowki .pasek {
+    height: 30px;
+    width: 2px;
+    float: left;
+}
 
-#content ul
-{ margin: 2px 0 22px 0px;}
+.forum .naglowki .lewy {
+    background: url('../obrazki/maly-lewy.gif') no-repeat left top;
+}
 
-#content ul li
-{ list-style-type: none;
-  background: url(bullet.png) no-repeat;
-  margin: 0 0 6px 0; 
-  padding: 0 0 4px 25px;
-  line-height: 1.5em;}
+.forum .naglowki .prawy {
+    background: url('../obrazki/maly-prawy.gif') no-repeat left top;
+}
 
-footer
-{ width: 916px;
-  font: normal 90% arial, sans-serif;
-  height: 28px;
-  margin-top: 20px;
-  padding: 20px 0 5px 0;
-  text-align: center; 
-  background: transparent;
-  color: #333;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;}
+.forum .naglowki .srodek {
+    background: url('../obrazki/maly-srodek.gif') repeat-x left bottom;
+}
 
-footer a, footer a:hover
-{ color: #888;
-  text-decoration: none;}
+.forum .naglowki h2.tekst {
+    margin: 0;
+    text-align: center;
+    padding: 7.5px 0;
+}
 
-footer a:hover
-{ color: #333;}
+.forum .naglowki .temat .szerokosc {
+    width: 556px;
+}
 
-.search
-{ color: #5D5D5D; 
-  border: 1px solid #BBB; 
-  width: 134px; 
-  padding: 4px; 
-  font: 100% arial, sans-serif;}
+.forum .naglowki .odpowiedzi .szerokosc {
+    width: 96px;
+}
 
-.form_settings
-{ margin: 15px 0 0 0;}
+.forum .naglowki .data_modyfikacji .szerokosc {
+    width: 136px;
+}
 
-.form_settings p
-{ padding: 0 0 4px 0;}
+.forum .naglowki .szerokosc {
+    width: 146px;
+}
 
-.form_settings span
-{ float: left; 
-  width: 200px; 
-  text-align: left;}
-  
-.form_settings input, .form_settings textarea
-{ padding: 2px; 
-  width: 299px; 
-  font: 100% arial; 
-  border: 1px solid #E5E5DB; 
-  background: #FFF; 
-  color: #47433F;}
-  
-.form_settings .submit
-{ font: 100% arial; 
-  border: 1px solid; 
-  width: 99px; 
-  margin: 0 0 0 206px; 
-  height: 26px;
-  padding: 2px 0 3px 0;
-  cursor: pointer; 
-  background: #3B3B3B; 
-  color: #FFF;}
+/* Forum zawartość */
 
-.form_settings textarea, .form_settings select
-{ font: 100% arial; 
-  width: 299px;}
+.forum .zawartosc ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
 
-.form_settings select
-{ width: 304px;}
+.forum .zawartosc li {
+    padding: 5px;
+    background: url('../obrazki/linia.gif') repeat-x left bottom;
+    font-size: .8em;
+}
 
-.form_settings .checkbox
-{ margin: 4px 0; 
-  padding: 0; 
-  width: 14px;
-  border: 0;
-  background: none;}
+.forum .zawartosc .tabelka {
+    float: left;
+}
 
-.separator
-{ width: 100%;
-  height: 0;
-  border-top: 1px solid #D9D5CF;
-  border-bottom: 1px solid #FFF;
-  margin: 0 0 20px 0;}
-  
-table
-{ margin: 10px 0 30px 0;}
+.forum .zawartosc .tematy {
+    width: 560px;
+}
 
-table tr th, table tr td
-{ background: #3B3B3B;
-  color: #FFF;
-  padding: 7px 4px;
-  text-align: left;}
-  
-table tr td
-{ background: #CCCCCC;
-  color: #47433F;
-  border-top: 1px solid #FFF;}
+.forum .zawartosc .odpowiedzi {
+    width: 100px;
+    text-align: center;
+}
+
+.forum .zawartosc .autorzy {
+    width: 150px;
+    text-align: center;
+}
+
+.forum .zawartosc .ostatnie_posty {
+    width: 150px;
+    text-align: center;
+}
+
+.forum .zawartosc .daty_modyfikacji {
+    width: 140px;
+    text-align: center;
+}
+
+
+/* Stopka */
+
+footer {
+	text-align: center;
+	font-size: 9px;
+        color: white;
+}
+
+
+footer a {
+	text-align: center;
+	font-size: 9px;
+        color: cyan;
+}
