Podzielenie styli na odzielne pliki, lista użytkowników już działa

--- a/forum/DFor/templates/baza.html
+++ b/forum/DFor/templates/baza.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>Forum - DFor: {% block title %} {% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
+    {% block style %} {% endblock %}
 </head>
 
 <body>
