--- a/forum/DFor/templates/fora.html
+++ b/forum/DFor/templates/fora.html
@@ -4,6 +4,10 @@
     Strona główna
 {% endblock %}
 
+{% block style %}
+    <link rel="stylesheet" type="text/css" href="/static/css/fora.css" />
+{% endblock %}
+
 {% block zawartosc %}
     {% for forum in fora %}
     <div class="forum">
