--- a/forum/DFor/templates/baza.html
+++ b/forum/DFor/templates/baza.html
@@ -6,6 +6,7 @@
     <title>Forum - DFor: {% block title %} {% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
     {% block style %} {% endblock %}
+    {% block head %} {% endblock %}
 </head>
 
 <body>
@@ -18,11 +19,11 @@
             <li><a href="/dfor/szukaj">Szukaj</a></li>
             {% if czyZalogowany %}
 		<li><a href="/dfor/uzytkownicy">Użytkownicy</a></li>
-		<li><a href="/dfor/grupy">Grupy</a></li>
 		<li><a href="/dfor/profil">Profil</a></li>
 		<li><a href="/dfor/wyloguj">Wyloguj ({{ uzytkownik }})</a></li>
 	    {% else %}
 		<li><a href="/dfor/zaloguj/?next=/dfor">Zaloguj</a></li>
+		<li><a href="/dfor/zarejestruj">Zarejestruj</a></li>
 	    {% endif %}
 	</ul>
 	{% endblock %}
