--- a/forum/DFor/templates/uzytkownik.html
+++ b/forum/DFor/templates/uzytkownik.html
@@ -10,15 +10,15 @@
 
 {% block zawartosc %}
    <div class="uzytkownik">
-	<div class="naglowek">
+	<div class="naglowek2">
 	    <div class="login">
-		<div class="pasek lewy"></div>
-		<div class="pasek srodek szerokosc">
+		<div class="belka lewy"></div>
+		<div class="belka srodek szerokosc">
 		    <h2 class="tekst">
 			Profil użytkownika {{ uzytk.uzytkownik.username }}
 		    </h2>
 		</div>
-		<div class="pasek prawy"></div>
+		<div class="belka prawy"></div>
 	    </div>
 	    <div style="clear: both;"></div>
 	</div>
