--- a/forum/DFor/templates/fora.html
+++ b/forum/DFor/templates/fora.html
@@ -11,113 +11,114 @@
 {% block zawartosc %}
     {% for forum in fora %}
     <div class="forum">
-	<div class="gora">
+	<div class="naglowek1">
 	    <div class="tytul">
-		<div class="pasek lewy"></div>
-		<div class="pasek srodek">
+		<div class="belka lewy"></div>
+		<div class="belka srodek">
 		    <h1 class="tekst">
 			{{ forum }}
 		    </h1>
 		</div>
-		<div class="pasek prawy"></div>
+		<div class="belka prawy"></div>
 	    </div>
 	    <a href="nowytemat/{{ forum.id }}">
 		<div class="nowy_temat">
-		    <div class="pasek lewy"></div>
-		    <div class="pasek srodek">
+		    <div class="belka lewy"></div>
+		    <div class="belka srodek">
 			<h1 class="tekst">
 			    Nowy temat
 			</h1>
 		    </div>
-		    <div class="pasek prawy"></div>
+		    <div class="belka prawy"></div>
 		</div>
 	    </a>
 	    <div style="clear: both;"></div>
+	    {% if forum.opis %}
+		<p class="opis">
+		    {{ forum.opis }}
+		</p>
+	    {% endif %}
 	</div>
-	{% if forum.opis %}
-	    <p class="opis">
-		{{ forum.opis }}
-	    </p>
-	{% endif %}
-	<div class="naglowki">
+
+	<div class="naglowek2">
 	    <div class="temat">
-		<div class="pasek lewy"></div>
-		<div class="pasek srodek szerokosc">
+		<div class="belka lewy"></div>
+		<div class="belka srodek szerokosc">
 		    <h2 class="tekst">
 			Temat
 		    </h2>
 		</div>
-		<div class="pasek prawy"></div>
+		<div class="belka prawy"></div>
 	    </div>
 	    <div class="odpowiedzi">
-		<div class="pasek lewy"></div>
-		<div class="pasek srodek szerokosc">
+		<div class="belka lewy"></div>
+		<div class="belka srodek szerokosc">
 		    <h2 class="tekst">
 			Odpowiedzi
 		    </h2>
 		</div>
-		<div class="pasek prawy"></div>
+		<div class="belka prawy"></div>
 	    </div>
 	    <div class="autor">
-		<div class="pasek lewy"></div>
-		<div class="pasek srodek szerokosc">
+		<div class="belka lewy"></div>
+		<div class="belka srodek szerokosc">
 		    <h2 class="tekst">
 			Autor
 		    </h2>
 		</div>
-		<div class="pasek prawy"></div>
+		<div class="belka prawy"></div>
 	    </div>
 	    <div class="ostatni_post">
-		<div class="pasek lewy"></div>
-		<div class="pasek srodek szerokosc">
+		<div class="belka lewy"></div>
+		<div class="belka srodek szerokosc">
 		    <h2 class="tekst">
 			Ostatni post
 		    </h2>
 		</div>
-		<div class="pasek prawy"></div>
+		<div class="belka prawy"></div>
 	    </div>
 	    <div class="data_modyfikacji">
-		<div class="pasek lewy"></div>
-		<div class="pasek srodek szerokosc">
+		<div class="belka lewy"></div>
+		<div class="belka srodek szerokosc">
 		    <h2 class="tekst">
 			Data modyfikacji
 		    </h2>
 		</div>
-		<div class="pasek prawy"></div>
+		<div class="belka prawy"></div>
 	    </div>
 	    <div style="clear: both;"></div>
 	</div>
 	
-	<div class="zawartosc">
-	    <div class="tabelka tematy">
+	<div class="tabela">
+	    <div class="ulozenie tematy">
 		<ul>
 		{% for temat in forum.tematy.all %}
 		    <li><a href="/dfor/temat/{{ temat.id }}">{{ temat }}</a></li>
 		{% endfor %}
 		</ul>
 	    </div>
-	    <div class="tabelka odpowiedzi">
+	    <div class="ulozenie odpowiedzi">
 		<ul>
 		{% for temat in forum.tematy.all %}
 		    <li>{{ temat.posty.count }}</li>
 		{% endfor %} 
 		</ul>
 	    </div>
-	    <div class="tabelka autorzy">
+	    <div class="ulozenie autorzy">
 		<ul>
 		{% for temat in forum.tematy.all %}
 		    <li><a href="/dfor/uzytkownik/{{ temat.autorTematu.id }}">{{ temat.autorTematu }}</a></li>
 		{% endfor %}    
 		</ul>
 	    </div>
-	    <div class="tabelka ostatnie_posty">
+	    <div class="ulozenie ostatnie_posty">
 		<ul>
 		{% for temat in forum.tematy.all %}
 		    <li><a href="/dfor/uzytkownik/{{ temat.ostatniPost.autor.id }}">{{ temat.ostatniPost.autor }}</a></li>
 		{% endfor %}  
 		</ul>
 	    </div>
-	    <div class="tabelka daty_modyfikacji">
+	    <div class="ulozenie daty_modyfikacji">
 		<ul>
 		{% for temat in forum.tematy.all %}
 		    <li>{{ temat.ostatniPost.data_modyfikacji|date:'d.m.Y H:i' }}</li>
