--- a/forum/DFor/templates/temat.html
+++ b/forum/DFor/templates/temat.html
@@ -10,49 +10,49 @@
 
 {% block zawartosc %}
     <div class="temat">
-	<div class="gora">
+	<div class="naglowek1">
 	    <div class="tytul">
-		<div class="pasek lewy"></div>
-		<div class="pasek srodek">
+		<div class="belka lewy"></div>
+		<div class="belka srodek">
 		    <h1 class="tekst">
 			{{ temat.tytul }}
 		    </h1>
 		</div>
-		<div class="pasek prawy"></div>
+		<div class="belka prawy"></div>
 	    </div>
 	    <a href="odpowiedz/">
 		<div class="odpowiedz">
-		    <div class="pasek lewy"></div>
-		    <div class="pasek srodek">
+		    <div class="belka lewy"></div>
+		    <div class="belka srodek">
 			<h1 class="tekst">
 			    Odpowiedz
 			</h1>
 		    </div>
-		    <div class="pasek prawy"></div>
+		    <div class="belka prawy"></div>
 		</div>
 	    </a>
 	    <div style="clear: both;"></div>
 	</div>
 	
 	{% for post in temat.posty.all %}
-	<div class="naglowki">
+	<div class="naglowek2">
 	    <div class="autor">
-		<div class="pasek lewy"></div>
-		<div class="pasek srodek szerokosc">
+		<div class="belka lewy"></div>
+		<div class="belka srodek szerokosc">
 		    <h2 class="tekst">
 			Autor
 		    </h2>
 		</div>
-		<div class="pasek prawy"></div>
+		<div class="belka prawy"></div>
 	    </div>
 	    <div class="wiadomosc">
-		<div class="pasek lewy"></div>
-		<div class="pasek srodek szerokosc">
+		<div class="belka lewy"></div>
+		<div class="belka srodek szerokosc">
 		    <h2 class="tekst">
 			Wiadomość
 		    </h2>
 		</div>
-		<div class="pasek prawy"></div>
+		<div class="belka prawy"></div>
 	    </div>
 	    <div style="clear: both;"></div>
 	</div>
@@ -97,25 +97,25 @@
 	</div>
 	{% endfor %}
 	
-	<div class="gora">
+	<div class="naglowek1">
 	    <div class="tytul">
-		<div class="pasek lewy"></div>
-		<div class="pasek srodek">
+		<div class="belka lewy"></div>
+		<div class="belka srodek">
 		    <h1 class="tekst">
 			{{ temat.tytul }}
 		    </h1>
 		</div>
-		<div class="pasek prawy"></div>
+		<div class="belka prawy"></div>
 	    </div>
 	    <a href="odpowiedz/">
 		<div class="odpowiedz">
-		    <div class="pasek lewy"></div>
-		    <div class="pasek srodek">
+		    <div class="belka lewy"></div>
+		    <div class="belka srodek">
 			<h1 class="tekst">
 			    Odpowiedz
 			</h1>
 		    </div>
-		    <div class="pasek prawy"></div>
+		    <div class="belka prawy"></div>
 		</div>
 	    </a>
 	    <div style="clear: both;"></div>
