--- a/forum/DFor/templates/posty.html
+++ b/forum/DFor/templates/posty.html
@@ -6,7 +6,7 @@
 
 {% block style %}
     <link rel="stylesheet" type="text/css" href="/static/css/posty.css" />
-    <link rel="stylesheet" type="text/css" href="/static/css/temat.css" />   
+    <link rel="stylesheet" type="text/css" href="/static/css/post.css" />   
 {% endblock %}
 
 {% block zawartosc %}
@@ -25,66 +25,7 @@
 	</div>
 	
 	{% for post in posty %}
-	<div class="naglowek2">
-	    <div class="autor">
-		<div class="belka lewy"></div>
-		<div class="belka srodek szerokosc">
-		    <h2 class="tekst">
-			Autor
-		    </h2>
-		</div>
-		<div class="belka prawy"></div>
-	    </div>
-	    <div class="wiadomosc">
-		<div class="belka lewy"></div>
-		<div class="belka srodek szerokosc">
-		    <h2 class="tekst">
-			Wiadomość
-		    </h2>
-		</div>
-		<div class="belka prawy"></div>
-	    </div>
-	    <div style="clear: both;"></div>
-	</div>
-	
-	<div class="post">
-	    <div class="tabelka autor">
-		<p class="tekst 
-		{% if post.autor.plec = 'K' %}
-		    kobieta
-		{% elif post.autor.plec = 'M' %}
-		    mezczyzna
-		{% else %}
-		    nieznany
-		{% endif %}
-		">
-		<a href="/dfor/uzytkownik/{{ post.autor.id }}">{{ post.autor }}</a></p>
-		{% if post.autor.avatar %}
-		    <p><img src="{{ media }}{{ post.autor.avatar }}" /></p>
-		{% endif %}
-		<p>
-		{% if post.autor.data_urodzenia %}
-		    Wiek: {{ post.autor.wiek }}<br>
-		{% endif %}
-		Posty: {{ post.autor.iloscPostow }}</p>
-	    </div>
-	    <div class="tabelka wiadomosc">
-		<p class="daty">Dodany {{ post.data_utworzenia }}
-		{% if post.zmieniony %}
-		    zmieniony {{ post.data_modyfikacji }}
-		{% endif %}
-		</p>
-		<p class="tresc 
-		{% if post.autor.podpis %}
-		kreska
-		{% endif %}
-		">{{ post.tekst|safe }}</p>
-		{% if post.autor.podpis %}
-		<p class="podpis">{{ post.autor.podpis }}</p>
-		{% endif %}
-	    </div>
-	    <div style="clear: both;"></div>
-	</div>
+	{% include "post.html" %}
 	{% endfor %}
     </div>
 {% endblock %}
