Zwiekszanie funkcjonalności edycji profilu plus poprawki w innych miejscach

--- a/forum/DFor/templates/fora.html
+++ b/forum/DFor/templates/fora.html
@@ -100,7 +100,7 @@
 	    <div class="ulozenie odpowiedzi">
 		<ul>
 		{% for temat in forum.tematy.all %}
-		    <li>{{ temat.posty.count }}</li>
+		    <li>{{ temat.iloscOdpowiedzi }}</li>
 		{% endfor %} 
 		</ul>
 	    </div>
