--- a/forum/DFor/templates/post.html
+++ b/forum/DFor/templates/post.html
@@ -35,7 +35,7 @@
 		    <div class="belka prawy"></div>
 		</div>
 	    </a>
-	    <a href="/dfor/post/usun/{{ post.id }}">
+	    <a href="/dfor/post/usun/{{ post.id }}" onclick="return (confirm('Napewno chcesz usunąć ten post?'))">
 		<div class="usun">
 		    <div class="belka lewy"></div>
 		    <div class="belka srodek szerokosc">
