--- a/forum/DFor/static/css/formularz_post.css
+++ b/forum/DFor/static/css/formularz_post.css
@@ -8,6 +8,23 @@
     text-align: center;
 }
 
+.formularz {
+    margin-left: auto;
+    margin-right: auto;
+    width: 616px;
+}
+
+.tabelka {
+    float: left;
+    margin-bottom: 5px;
+}
+
+.opis {
+    width: 30px;
+    margin-top: 3px;
+    text-align: left;
+}
+
 .naglowek2 .szerokosc {
     width: 896px;
 }
