--- a/forum/DFor/static/css/zaloguj.css
+++ b/forum/DFor/static/css/zaloguj.css
@@ -1,18 +1,33 @@
 .zaloguj {
     margin-left: auto;
     margin-right: auto;
-    width: 306px;
+    width: 316px;
     padding: 20px 0 0 0;
     text-align: center;
 }
 
-.zaloguj .tabelka {
+.formularz {
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 306px;
+}
+
+.tabelka {
     float: left;
     margin-bottom: 5px;
 }
 
-.zaloguj .opis {
+.opis {
     width: 120px;
     margin-top: 3px;
     text-align: left;
+}
+
+.naglowek2 .szerokosc {
+    width: 312px;
+}
+
+.naglowek2 .guzik .szerokosc {
+    width: 96px;
 }
