--- a/forum/DFor/templates/zaloguj.html
+++ b/forum/DFor/templates/zaloguj.html
@@ -13,16 +13,50 @@
     <script type="text/javascript">
 	$(document).ready(function(){
 	    $("#id_username").focus();
+	    $('#form_submit').hide();
+  	    $('#id_tytul').css('width','212px');
+ 	    $('#id_guzik').html("<a href=\"#\" onclick=\"slij();return false;\"><div class=\"belka lewy\"></div><div class=\"belka srodek szerokosc\"><h2 class=\"tekst\">Zaloguj</h2></div><div class=\"belka prawy\"></div></a>");
+	    $('#id_username').keypress(function(e) {
+		if (e.keyCode == 13) {
+		    slij();
+		    return e.preventDefault();
+		}
+	    });
+	    $('#id_password').keypress(function(e) {
+		if (e.keyCode == 13) {
+		    slij();
+		    return e.preventDefault();
+		}
+	    });
 	});
+	function slij() {
+	    $('#id_form').submit();
+	}
     </script>
 {% endblock %}
 
 {% block zawartosc %}
    <div class="zaloguj">
+	<div class="naglowek2">
+	    <div class="tytul">
+		<div class="belka lewy"></div>
+		<div class="belka srodek szerokosc" id="id_tytul">
+		    <h2 class="tekst">
+			Logowanie do forum
+		    </h2>
+		</div>
+		<div class="belka prawy"></div>
+	    </div>
+	    <form action="." method="post" id="id_form">
+	    <form method="post" action="{% url django.contrib.auth.views.login %}">
+	    <div class="guzik" id="id_guzik"></div>
+	    <div style="clear: both;"></div>
+	</div>
+	
    	{% if form.errors %}
 	    <p>Twoj login lub hasło są niepoprawne.</p>
 	{% endif %}
-	<form method="post" action="{% url django.contrib.auth.views.login %}">
+	<div class="formularz">
 	    {% csrf_token %}
 	    <div class="tabelka opis">
 		{{ form.username.label_tag }}
@@ -38,8 +72,9 @@
 		{{ form.password }}
 	    </div>
 	    <div style="clear: both;"></div>
-	    <input type="submit" value="zaloguj" />
+	    <input type="submit" value="zaloguj" id="form_submit" />
 	    <input type="hidden" name="next" value="{{ next }}" />
-	</form>
+	    </form>
+	</div>
     </div>
 {% endblock %}
